--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         android:theme="@style/Theme.IPassPlus"
         android:usesCleartextTraffic="true"
         android:largeHeap="true"
+        android:extractNativeLibs="true"
         android:hardwareAccelerated="true"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
