--- a/IPassPlusSdk/src/main/AndroidManifest.xml
+++ b/IPassPlusSdk/src/main/AndroidManifest.xml
@@ -12,5 +12,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
+    <application android:extractNativeLibs="true"/>
 
 </manifest>
